# ImageCropper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
docs/: Cropped Testimage.avif  Imagecropper Multicrop.avif  Imagecropper Screenshot.avif  Multicrop Result.avif
src/: app.rs  fs_utils.rs  image_utils.rs  lib.rs  main.rs  selection.rs  ui.rs
src/app/: canvas.rs  loader.rs  mod.rs  saver.rs
test-images/: Test Image 1.avif  Test Image 2.avif
tests/: canvas.rs  fs_utils.rs  image_utils.rs  loader.rs  saver.rs  selection.rs  ui.rs
tests/common/: mod.rs
