[package]
name = "imagecropper"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/ulikoehler/ImageCropper"
repository = "https://github.com/ulikoehler/ImageCropper"
description = "Batch interactive image cropper with multicrop support"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "ico", "tiff", "webp", "avif", "avif-native"] }
rand = "0.8"
walkdir = "2.5"

[dev-dependencies]
once_cell = "1"
tempfile = "3"
