[package]
name = "imagecropper"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/ulikoehler/ImageCropper"
repository = "https://github.com/ulikoehler/ImageCropper"
description = "Batch interactive image cropper with multicrop support"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
fast_image_resize = "5.4.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "ico", "tiff", "webp", "avif", "avif-native"] }
img-parts = "0.4.0"
rand = "0.8"
walkdir = "2.5"
wgpu = { version = "27.0.1", features = ["vulkan", "gles"] }
zune-jpeg = "0.5.5"

[dev-dependencies]
once_cell = "1"
tempfile = "3"
